--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -17,7 +17,19 @@
         android:src="@mipmap/ic_leader_maplocation"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <com.jaredrummler.materialspinner.MaterialSpinner
+            android:id="@+id/sp_standard"
+            android:gravity="center"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <com.jaredrummler.materialspinner.MaterialSpinner
+            android:id="@+id/sp_distance"
+            android:gravity="center"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
