--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -32,4 +32,71 @@
             android:layout_weight="1"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll_report"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:orientation="vertical"
+        android:background="@drawable/rectangle_bg"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="80dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_report"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:text="上报"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll_standard"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:orientation="vertical"
+        android:background="@drawable/rectangle_bg"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/ll_report"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center">
+        <View
+            android:layout_width="34dp"
+            android:layout_height="4dp"
+            android:padding="5dp"
+            android:background="#FF0000"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textSize="10sp"
+            android:text="标准"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_unstandard"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:orientation="vertical"
+        android:background="@drawable/rectangle_bg"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/ll_standard"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center">
+        <View
+            android:layout_width="34dp"
+            android:layout_height="4dp"
+            android:padding="5dp"
+            android:background="#F27C01"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textSize="10sp"
+            android:text="非标准"/>
+    </LinearLayout>
 </RelativeLayout>
